# ippon

./: .env.example  .gitguardian.yml  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  README.md  alembic.ini  docker-compose.override.yml.example  docker-compose.yml  justfile  pyproject.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  zizmor.yml
alembic/: env.py
alembic/versions/: 66fddcb78fbc_add_secret_scan_policy_columns.py  8c8832ce9746_initial_schema.py  9539a84c02e4_multi_vcs_source_connections.py
docker/: api.Dockerfile  backend.Dockerfile  reporter.Dockerfile  web.Dockerfile  worker.Dockerfile
docs/superpowers/plans/: 2026-06-28-secret-detection.md
docs/superpowers/specs/: 2026-06-28-secret-detection-design.md
manifests/cluster/: grype-db-pvc.yaml  grype-db-updater-cronjob.yaml  namespace.yaml  scanner-rbac.yaml
manifests/jobs/: scan-job.yaml.j2
migrations/clickhouse/: 0001_initial.sql  0002_secret_findings.sql  apply.py
src/ippon/: __init__.py  clickhouse.py  config.py  db.py  security.py
src/ippon/api/: _bootstrap.py  deps.py  main.py
src/ippon/api/routes/: admin.py  auth.py  health.py  internal.py  orgs.py  repos.py  scans.py  sources.py
src/ippon/api/routes/webhooks/: _common.py  azure_devops.py  github.py  gitlab.py
src/ippon/models/: __init__.py  _enums.py  org.py  repository.py  scan_job.py  scan_policy.py  source_connection.py  user.py  webhook_delivery.py
src/ippon/reporter/: __init__.py  __main__.py  callback.py  ingest.py
src/ippon/scanner/: pipeline.py
src/ippon/scanner/runner/: __init__.py  base.py  docker.py  inline.py  k8s.py
src/ippon/schemas/: finding.py  repo.py  scan.py  secret.py  source.py
src/ippon/scripts/: scan.py
src/ippon/worker/: celery_app.py
src/ippon/worker/tasks/: __init__.py  enrich.py  notify.py  ping.py  scan.py
tests/: conftest.py
tests/fixtures/: betterleaks-report.json
tests/integration/: test_services_reachable.py  test_sources.py
tests/k8s/: test_k8s_runner.py
tests/unit/: test_api_smoke.py  test_betterleaks_args.py  test_bootstrap.py  test_celery.py  test_clickhouse.py  test_docker_runner.py  test_imports.py  test_inline_clone_cmd.py  test_k8s_template.py  test_models.py  test_secret_config_spec.py  test_secret_findings_migration.py  test_secret_ingest.py  test_secret_pipeline.py  test_secret_policy_model.py  test_secrets_endpoint.py  test_security.py
web/: .env.example  .gitignore  index.html  orval.config.ts  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
web/src/: index.css  main.tsx  vite-env.d.ts
web/src/api/: client.ts  fetcher.ts
web/src/components/ui/: badge.tsx  button.tsx  table.tsx
web/src/lib/: utils.ts
web/src/routes/: __root.tsx
web/src/routes/repos/: index.tsx
web/src/routes/scans/: $id.tsx
